--- a/src/main/webapp/WEB-INF/templates/errorPage/500.html
+++ b/src/main/webapp/WEB-INF/templates/errorPage/500.html
@@ -3,9 +3,49 @@
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>系统内部繁忙</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="stylesheet" href="../../static/materialize/css/materialize.min.css"/>
+    <link rel="stylesheet" href="../../static/application/css/global.css"/>
+    <link rel="shoutcut icon" type="image/x-icon" href="favicon.ico" media="all"/>
+    <title>系统繁忙</title>
 </head>
 <body>
+<nav class="nav-extended nav-full-header z-depth-0">
+    <div class="nav-background" style="background-color: #37474f;opacity: 1;">
+        <div class="pattern active" id="error-400"></div>
+    </div>
+    <div class="nav-content">
+        <h1>&nbsp;</h1>
+    </div>
+</nav>
+<div class="row">
+    <div class="col s12 m4 l4 offset-m4 offset-l4">
+        <div class="card  hoverable">
+            <div class="card-image" style="background-color: #29353d;">
+                <img src="../../static/application/image/500.png" class="center-block"
+                     style="width: 300px; height: 300px;">
+                <span class="card-title">系统繁忙</span>
+            </div>
+            <div class="card-content">
+                <p>系统内部正在进行一些准备，您可以返回上一页，再尝试进行操作。</p>
+            </div>
+            <div class="card-action">
+                <a class="waves-effect waves-light btn" onclick="history.go(-1)">
+                    <i class="material-icons left">arrow_back</i>
+                    返回</a>
+            </div>
+        </div>
+    </div>
+</div>
 
+<script type="text/javascript" src="../../static/application/js/jquery.min.js"></script>
+<script type="text/javascript" src="../../static/materialize/js/materialize.min.js"></script>
+<script type="text/javascript">
+    $(document.body).css({
+        "overflow-x": "hidden",
+        "overflow-y": "hidden"
+    })
+</script>
 </body>
 </html>
