--- a/src/main/webapp/WEB-INF/templates/system/login.html
+++ b/src/main/webapp/WEB-INF/templates/system/login.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <link rel="stylesheet" th:href="@{static/materialize/css/materialize.min.css}"/>
-    <link rel="stylesheet" th:href="@{static/application/css/global.css}"/>
+    <link rel="stylesheet" href="../../static/application/css/global.css"/>
+    <link rel="stylesheet" href="../../static/materialize/css/materialize.min.css"/>
     <link rel="shoutcut icon" type="image/x-icon" href="favicon.ico" media="all"/>
     <title>登录 - 广告机管理后台</title>
 </head>
 <body>
-<nav class="nav-extended nav-full-header">
+<nav class="nav-extended nav-full-header" style="background-color: #37474f;">
     <div class="nav-background">
-        <div id="login-background" class="pattern active"></div>
+        <div class="pattern active" style="background-image: url('../../static/application/image/stars.jpg');"></div>
     </div>
     <div class="nav-wrapper container">
         <a href="#" itemprop="url" class="brand-logo">
@@ -29,34 +29,35 @@
                 <span class="card-title center-align">广告机管理后台 登录</span>
             </div>
             <div class="card-action">
-                <form th:action="@{/login}" method="post">
-                    <!-- <editor-fold desc="login input elements"> -->
-                    <div class="row">
-                        <div class="input-field col s12 m12 l12"
-                             style="margin-top: 10px;margin-bottom: 0;padding-top: 0; padding-bottom: 0;">
-                            <input id="authname" name="authname" type="text" class="validate white-text center">
-                            <label for="authname" class="white-text">登录账号</label>
-                        </div>
+                <!-- <editor-fold desc="login input elements"> -->
+                <div class="row">
+                    <div class="input-field col s12 m12 l12"
+                         style="margin-top: 10px;margin-bottom: 0;padding-top: 0; padding-bottom: 0;">
+                        <i class="material-icons prefix">account_circle</i>
+                        <input id="authname" type="text" class="validate white-text center" required="required"/>
+                        <label for="authname" class="grey-text">登录账号</label>
                     </div>
-                    <div class="row">
-                        <div class="input-field col s12 m12 l12"
-                             style="margin-top: 0;margin-bottom: 10px;padding-top: 0; padding-bottom: 0;">
-                            <input id="password" name="password" type="password" class="validate white-text center">
-                            <label for="password" class="white-text">登录密码</label>
-                        </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s12 m12 l12"
+                         style="margin-top: 0;margin-bottom: 10px;padding-top: 0; padding-bottom: 0;">
+                        <i class="material-icons prefix">security</i>
+                        <input id="password" type="password" class="validate white-text center" required="required"/>
+                        <label for="password" class="grey-text">登录密码</label>
                     </div>
-                    <!-- </editor-fold> -->
-                    <!-- <editor-fold desc="action buttons"> -->
-                    <div class="row">
-                        <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3">
-                            <button class="btn waves-effect waves-light" type="submit" name="action">登录
-                                <i class="material-icons right">send</i>
-                            </button>
-                        </div>
-                        <div class="col s2 m2 l2"></div>
+                </div>
+                <!-- </editor-fold> -->
+                <!-- <editor-fold desc="action buttons"> -->
+                <div class="row">
+                    <div class="col s3 m3 l3"></div>
+                    <div class="col s6 m6 l6">
+                        <button class="btn waves-effect waves-light" type="submit" name="action">登录
+                            <i class="material-icons right">send</i>
+                        </button>
                     </div>
-                    <!-- </editor-fold> -->
-                </form>
+                    <div class="col s2 m2 l2"></div>
+                </div>
+                <!-- </editor-fold> -->
             </div>
         </div>
     </div>
@@ -70,8 +71,8 @@
     </div>
 </footer>
 
-<script type="text/javascript" th:src="@{static/application/js/jquery.min.js}"></script>
-<script type="text/javascript" th:src="@{static/materialize/js/materialize.min.js}"></script>
+<script type="text/javascript" src="../../static/application/js/jquery.min.js"></script>
+<script type="text/javascript" src="../../static/materialize/js/materialize.min.js"></script>
 <script type="text/javascript">
     $(document.body).css({
         "overflow-x": "hidden",
