--- a/src/main/webapp/WEB-INF/templates/system/login.html
+++ b/src/main/webapp/WEB-INF/templates/system/login.html
@@ -5,15 +5,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <link rel="stylesheet" href="../../static/application/css/global.css"/>
-    <link rel="stylesheet" href="../../static/materialize/css/materialize.min.css"/>
+    <link rel="stylesheet" href="../../../static/application/css/global.css"/>
+    <link rel="stylesheet" href="../../../static/materialize/css/materialize.min.css"/>
     <link rel="shoutcut icon" type="image/x-icon" href="favicon.ico" media="all"/>
     <title>登录 - 广告机管理后台</title>
 </head>
 <body>
 <nav class="nav-extended nav-full-header" style="background-color: #37474f;">
     <div class="nav-background">
-        <div class="pattern active" style="background-image: url('../../static/application/image/stars.jpg');"></div>
+        <div class="pattern active" style="background-image: url('../../../static/application/image/stars.jpg');"></div>
     </div>
     <div class="nav-wrapper container">
         <a href="#" itemprop="url" class="brand-logo">
@@ -71,8 +71,8 @@
     </div>
 </footer>
 
-<script type="text/javascript" src="../../static/application/js/jquery.min.js"></script>
-<script type="text/javascript" src="../../static/materialize/js/materialize.min.js"></script>
+<script type="text/javascript" src="../../../static/application/js/jquery.min.js"></script>
+<script type="text/javascript" src="../../../static/materialize/js/materialize.min.js"></script>
 <script type="text/javascript">
     $(document.body).css({
         "overflow-x": "hidden",
