--- a/src/main/webapp/WEB-INF/templates/system/main.html
+++ b/src/main/webapp/WEB-INF/templates/system/main.html
@@ -5,14 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <link rel="stylesheet" href="../../static/application/css/global.css"/>
-    <link rel="stylesheet" href="../../static/materialize/css/materialize.min.css"/>
+    <link rel="stylesheet" href="../../../static/application/css/global.css"/>
+    <link rel="stylesheet" href="../../../static/materialize/css/materialize.min.css"/>
     <link rel="shoutcut icon" type="image/x-icon" href="favicon.ico" media="all"/>
-    <style type="text/css">
-        .side-nav li.active {
-            background-color: rgba(0, 0, 0, 0.15);
-        }
-    </style>
     <title>首页 - 广告机管理后台</title>
 </head>
 <body>
@@ -30,7 +25,7 @@
             <ul id="nav-mobile" class="side-nav fixed" style="transform: translateX(0%);">
                 <li class="logo">
                     <a id="logo-container" href="#" class="brand-logo">
-                        <img src="../../static/application/image/logo.png" alt="logo" class="center-block"/>
+                        <img src="../../../static/application/image/logo.png" alt="logo" class="center-block"/>
                     </a>
                 </li>
                 <li class="active">
@@ -85,8 +80,8 @@
     </div>
 </footer>
 
-<script type="text/javascript" src="../../static/application/js/jquery.min.js"></script>
-<script type="text/javascript" src="../../static/materialize/js/materialize.min.js"></script>
+<script type="text/javascript" src="../../../static/application/js/jquery.min.js"></script>
+<script type="text/javascript" src="../../../static/materialize/js/materialize.min.js"></script>
 <script type="text/javascript">
     $(document.body).css({
         "overflow-x": "hidden",
