--- a/src/main/webapp/WEB-INF/templates/system/main.html
+++ b/src/main/webapp/WEB-INF/templates/system/main.html
@@ -50,15 +50,13 @@
             <ul class="right">
                 <li>username，欢迎</li>
                 <li>
-                    <a class="dropdown-button" href="#!" data-activates="dropdown-menu">
+                    <a class="dropdown-button" href="#" data-activates="dropdown-menu">
                         <i class="material-icons right">account_circle</i>
                     </a>
                 </li>
             </ul>
             <ul id="dropdown-menu" class="dropdown-content">
-                <!--<li><a href="#!" class="black-text">one</a></li>-->
-                <!--<li class="divider"></li>-->
-                <li><a href="#!" class="black-text">退出</a></li>
+                <li><a href="#" class="black-text">退出</a></li>
             </ul>
             <!--/* </editor-fold> */-->
         </div>
