--- a/src/main/webapp/WEB-INF/templates/advertisement/advertisementList.html
+++ b/src/main/webapp/WEB-INF/templates/advertisement/advertisementList.html
@@ -1,11 +1,325 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>广告列表</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="stylesheet" href="../../../static/application/css/global.css"/>
+    <link rel="stylesheet" href="../../../static/materialize/css/materialize.min.css"/>
+    <link rel="shoutcut icon" type="image/x-icon" href="favicon.ico" media="all"/>
+    <title>广告 - 广告机管理后台</title>
 </head>
 <body>
+<header>
+    <nav style="background-color: #37474f;z-index: 1;">
+        <div class="nav-wrapper">
+            <!--/* <editor-fold desc="responsive navigation"> */-->
+            <ul class="left">
+                <li style="height: 56px;">
+                    <a href="#" data-activates="nav-mobile" id="button-nav-menu" class="hide-on-large-only">
+                        <i class="material-icons">menu</i>
+                    </a>
+                </li>
+            </ul>
+            <ul id="nav-mobile" class="side-nav fixed" style="transform: translateX(0%);">
+                <li class="logo">
+                    <a id="logo-container" href="#" class="brand-logo">
+                        <img src="../../../static/application/image/logo.png" alt="logo" class="center-block"/>
+                    </a>
+                </li>
+                <li>
+                    <a href="../system/main.html" class="waves-effect waves-teal">首页</a>
+                </li>
+                <li>
+                    <a href="../advertisementMachine/advertisementMachineList.html"
+                       class="waves-effect waves-teal">广告机</a>
+                </li>
+                <li class="active">
+                    <a href="#" class="waves-effect waves-teal">广告</a>
+                </li>
+                <li>
+                    <a href="../user/userList.html" class="waves-effect waves-teal">用户</a>
+                </li>
+                <li>
+                    <a href="../role/roleList.html" class="waves-effect waves-teal">角色 - 需要角色判断来显示</a>
+                </li>
+            </ul>
+            <!--/* </editor-fold> */-->
+            <!--/* <editor-fold desc="right navbar item"> */-->
+            <ul class="right">
+                <li>username，欢迎</li>
+                <li>
+                    <a class="dropdown-button" href="#" data-activates="dropdown-menu">
+                        <i class="material-icons right">account_circle</i>
+                    </a>
+                </li>
+            </ul>
+            <ul id="dropdown-menu" class="dropdown-content">
+                <li><a href="#" class="black-text">退出</a></li>
+            </ul>
+            <!--/* </editor-fold> */-->
+        </div>
+    </nav>
+</header>
 
+<main>
+    <div id="main-content" class="container">
+        <h5 class="title">广告列表</h5>
+        <ul>
+            <li class="divider"></li>
+        </ul>
+
+        <!--/* <editor-fold desc="search box"> */-->
+        <div id="search-box">
+            <form action="#" method="post">
+                <ul class="collapsible popout" data-collapsible="accordion">
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">search</i>条件搜索</div>
+                        <div class="collapsible-body">
+                            <div class="row valign-wrapper">
+                                <div class="col s12 m8 l8 center">
+                                    <div class="row">
+                                        <div class="input-field col s12 m6 l6">
+                                            <input id="name" name="name" type="text"/>
+                                            <label for="name">待查广告名称</label>
+                                        </div>
+                                        <div class="input-field col s12 m6 l6">
+                                            <select id="machineID" name="machineID">
+                                                <option value="" disabled="disabled" selected="selected">选择广告机</option>
+                                                <option value="1">广告机1</option>
+                                                <option value="2">广告机2</option>
+                                                <option value="3">广告机3</option>
+                                            </select>
+                                            <label for="machineID">按所属广告机查询</label>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="input-field col s12 m6 l6">
+                                            <input id="time" name="time" type="text" placeholder="输入播放时间"
+                                                   onmouseleave="checknumber()"/>
+                                            <label for="time">播放时间查询</label>
+                                        </div>
+                                        <div class="input-field col s12 m6 l6">
+                                            <input id="addTime" name="addTime" type="text" class="date-picker"/>
+                                            <label for="addTime">加入时间查询</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col s12 m4 l4 center">
+                                    <div class="input-field">
+                                        <button type="submit"
+                                                class="btn-floating btn-large waves-effect waves-light green">
+                                            <i class="material-icons">search</i>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </form>
+        </div>
+        <!--/* </editor-fold> */-->
+
+        <!--/* <editor-fold desc="table main content"> */-->
+        <table class="highlight responsive-table">
+            <thead>
+            <tr>
+                <th>名称</th>
+                <th>播放时间</th>
+                <th>加入时间</th>
+                <th>所属机器</th>
+                <th class="hide-on-med-and-down"></th>
+                <th class="hide-on-large-only"></th>
+            </tr>
+            </thead>
+            <tbody class="card">
+            <tr>
+                <td>name</td>
+                <td>time</td>
+                <td>addTime</td>
+                <td>machineID</td>
+                <td width="18%" class="right-align hide-on-med-and-down">
+                    <a class="btn-floating blue waves-effect waves-light tooltipped btn modal-trigger"
+                       data-position="top" data-delay="50" data-tooltip="查看详情" href="#detail-modal">
+                        <i class="material-icons">more_horiz</i>
+                    </a>
+                    <a class="btn-floating yellow waves-effect waves-light tooltipped btn modal-trigger"
+                       data-position="top" data-delay="50" data-tooltip="上传新图片/视频" href="#upload-new-image-or-video">
+                        <i class="material-icons">file_upload</i>
+                    </a>
+                    <a class="btn-floating green waves-effect waves-light tooltipped"
+                       data-position="top" data-delay="50" data-tooltip="编辑" href="advertisementForm.html">
+                        <i class="material-icons">edit</i>
+                    </a>
+                    <a class="btn-floating red darken-1 waves-effect waves-light tooltipped"
+                       data-position="top" data-delay="50" data-tooltip="删除">
+                        <i class="material-icons">delete</i>
+                    </a>
+                </td>
+                <td class="hide-on-large-only" id="mobile-table-item-buttons">
+                    <a class="btn-floating blue waves-effect waves-light tooltipped btn modal-trigger"
+                       data-position="top" data-delay="50" data-tooltip="查看详情" href="#detail-modal">
+                        <i class="material-icons">more_horiz</i>
+                    </a>
+                    <a class="btn-floating yellow waves-effect waves-light tooltipped btn modal-trigger"
+                       data-position="top" data-delay="50" data-tooltip="上传新图片/视频" href="#upload-new-image-or-video">
+                        <i class="material-icons">file_upload</i>
+                    </a>
+                    <br/>
+                    <a class="btn-floating green waves-effect waves-light tooltipped"
+                       data-position="top" data-delay="50" data-tooltip="编辑" href="advertisementForm.html">
+                        <i class="material-icons">edit</i>
+                    </a>
+                    <a class="btn-floating red darken-1 waves-effect waves-light tooltipped"
+                       data-position="top" data-delay="50" data-tooltip="删除">
+                        <i class="material-icons">delete</i>
+                    </a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <!--/* </editor-fold> */-->
+
+        <!--/* <editor-fold desc="add button"> */-->
+        <div id="fixed-add-btn" class="fixed-action-btn">
+            <a class="btn-floating btn-large waves-effect waves-light blue" href="advertisementForm.html">
+                <i class="large material-icons">add</i>
+            </a>
+        </div>
+        <!--/* </editor-fold> */-->
+
+        <!--/* <editor-fold desc="pagination"> */-->
+        <div class="center">
+            <ul class="pagination">
+                <li class="disabled"><a href="#"><i class="material-icons">chevron_left</i></a></li>
+                <li class="waves-effect" id="active-page"><a href="#">1</a></li>
+                <li class="waves-effect"><a href="#">2</a></li>
+                <li class="waves-effect"><a href="#">3</a></li>
+                <li class="waves-effect"><a href="#">4</a></li>
+                <li class="waves-effect"><a href="#">5</a></li>
+                <li class="waves-effect"><a href="#"><i class="material-icons">chevron_right</i></a></li>
+            </ul>
+        </div>
+        <!--/* </editor-fold> */-->
+    </div>
+
+    <!-- <editor-fold desc="Modal"> -->
+    <div id="detail-modal" class="modal modal-fixed-footer">
+        <div class="modal-content">
+            <h4>详情</h4>
+            <div class="row">
+                <div class="col s12 m6 l6">
+                    <h6>广告ID</h6>
+                    <p>id</p>
+                    <h6>名称</h6>
+                    <p>name</p>
+                    <h6>所属广告机</h6>
+                    <p>machineID</p>
+                </div>
+                <div class="col s12 m6 l6">
+                    <h6>播放时间</h6>
+                    <p>time</p>
+                    <h6>加入时间</h6>
+                    <p>addTime</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 m12 l12">
+                    <h6>图片/视频</h6>
+                    <p>播放内容</p>
+                    <h6>备注</h6>
+                    <p>remark</p>
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <a href="#" class="modal-action modal-close waves-effect waves-green btn-flat">关闭</a>
+        </div>
+    </div>
+
+    <div id="upload-new-image-or-video" class="modal modal-fixed-footer">
+        <form id="upload-image-or-video-form" action="#" method="post" enctype="multipart/form-data">
+            <div class="modal-content">
+                <h4>上传</h4>
+                <div class="col s12 m12 l12">
+                    <label for="url">选择新的图片或视频</label>
+                    <div class="file-field input-field">
+                        <div class="btn">
+                            <span>浏览</span>
+                            <input type="file" id="new-file" name="new-file"/>
+                        </div>
+                        <div class="file-path-wrapper">
+                            <input class="file-path validate" type="text" id="url" name="url"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <a href="#" class="modal-action modal-close waves-effect waves-green btn-flat">关闭</a>
+                <a class="modal-action modal-close waves-effect waves-green btn-flat"
+                   onclick="uploadimageorvideo()">上传</a>
+            </div>
+        </form>
+    </div>
+    <!-- </editor-fold> -->
+</main>
+
+<footer class="page-footer hide-on-med-and-down"
+        style="position: absolute; bottom: 0; left: 0;background-color: #37474f;">
+    <div class="footer-copyright">
+        <div class="container right-align">
+            © 2017 Copyright 珠海希梦电子科技有限公司
+        </div>
+    </div>
+</footer>
+
+<script type="text/javascript" src="../../../static/application/js/jquery.min.js"></script>
+<script type="text/javascript" src="../../../static/materialize/js/materialize.min.js"></script>
+<script type="text/javascript" src="../../../static/application/js/date-picker.js"></script>
+<script type="text/javascript" src="../../../static/application/js/global.js"></script>
+<script type="text/javascript">
+    $(function () {
+        resize_footer(window.screen.width);
+        $('#button-nav-menu').sideNav({
+            closeOnClick: true,
+            draggable: true
+        });
+
+        $('.dropdown-button').dropdown();
+
+        $('.date-picker').pickadatee({
+            closeOnSelect: true
+        });
+
+        $("#detail-modal").modal();
+        $("#upload-new-image-or-video").modal();
+
+        $("#machineID").material_select();
+    });
+
+    function uploadimageorvideo() {
+        var file = $("#url").val();
+        if (file === '') {
+            Materialize.toast("没有选择文件，该广告的图片/视频没有更新。", 5000);
+        } else {
+            // TODO: ajax submit form
+            $("#new-file").val(null);
+            $("#url").val(null);
+        }
+    }
+
+    function checknumber() {
+        var value = $("#time").val();
+        if (isNaN(value)) {
+            Materialize.toast("播放时间必须是整数", 5000);
+            $("#time").val(null);
+            return false;
+        } else {
+            return true;
+        }
+    }
+</script>
 </body>
 </html>
