--- a/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineForm.html
+++ b/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineForm.html
@@ -49,13 +49,13 @@
             <ul class="right">
                 <li>username，欢迎</li>
                 <li>
-                    <a class="dropdown-button" href="#!" data-activates="dropdown-menu">
+                    <a class="dropdown-button" href="#" data-activates="dropdown-menu">
                         <i class="material-icons right">account_circle</i>
                     </a>
                 </li>
             </ul>
             <ul id="dropdown-menu" class="dropdown-content">
-                <li><a href="#!" class="black-text">退出</a></li>
+                <li><a href="#" class="black-text">退出</a></li>
             </ul>
             <!--/* </editor-fold> */-->
         </div>
@@ -64,15 +64,15 @@
 
 <main>
     <div id="main-content" class="container">
-        <h4 class="title">
+        <h5 class="title">
             <a class="btn-flat tooltipped" data-position="bottom" data-delay="50" data-tooltip="返回列表"
                onclick="history.go(-1);"><i class="material-icons">arrow_back</i></a>&nbsp;|&nbsp;编辑广告机——名称
-        </h4>
+        </h5>
         <ul>
             <li class="divider"></li>
         </ul>
 
-        <form action="#!" method="post">
+        <form action="#" method="post">
             <!--/* <editor-fold desc="hidden fields"> */-->
             <input id="id" name="id" type="hidden" disabled="disabled" class="validate" required="required"/>
             <input id="longitude" name="longitude" type="hidden" disabled="disabled" class="validate"/>
@@ -118,7 +118,7 @@
             <div class="row">
                 <div class="input-field col s12 m12 l12">
                     <i class="material-icons prefix">insert_comment</i>
-                    <textarea id="remark" name="remark" class="materialize-textarea"></textarea>
+                    <textarea id="remark" name="remark" class="materialize-textarea" placeholder=""></textarea>
                     <label for="remark">备注</label>
                 </div>
             </div>
@@ -150,11 +150,6 @@
 <script type="text/javascript" src="../../../static/application/js/date-picker.js"></script>
 <script type="text/javascript" src="../../../static/application/js/global.js"></script>
 <script type="text/javascript">
-    $(document.body).css({
-        "overflow-x": "hidden",
-        "overflow-y": "hidden"
-    });
-
     $(function () {
         resize_footer(window.screen.width);
         $("#button-nav-menu").sideNav({
